src/test/deca/syntax/invalid/resultats/test5_print-synt.res
./src/test/deca/syntax/invalid/test5_print.deca:16:0: missing ';' at '}'
